@@ -339,8 +339,10 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Burmese (my)
 * Norwegian (no)
 * Polish (pl)
+* Piedmontese (pms)
 * Portuguese (pt)
 * Romanian (ro)
+* Aromanian (roa-rup)
 * Russian (ru)
 * Slovak (sk)
 * Slovenian (sl)
